@@ -164,7 +164,6 @@ print "ISFILE:" + ISFILE (x)
 print "ISLINK:" + ISLINK (x)
 print "ISMAP:" + ISMAP (x)
 print "ISNUMBER:" + ISNUMBER (x)
-print "ISREF:" + ISREF (x)
 print "ISSTRING:" + ISSTRING (s)
 print "JULIAN:" + JULIAN(d,m,y)
 print "LBOUND:" + LBOUND (a, 1)
