@@ -149,7 +149,6 @@ ISFILE:0
 ISLINK:0
 ISMAP:0
 ISNUMBER:1
-ISREF:0
 ISSTRING:1
 JULIAN:1721426
 LBOUND:0
@@ -173,7 +172,7 @@ POINT:0
 POLYAREA:0
 POLYCENT:
 POW:12.3
-PROGLINE:191
+PROGLINE:190
 PTDISTLN:0
 PTDISTSEG:0
 PTSIGN:0
