@@ -97,7 +97,6 @@ enum keyword {                // line 50
   kwUNIT,
   kwLET,
   kwLET_OPT,
-  kwLET_REF,
   kwCONST,
   kwPACKED_LET,
   kwEND,
@@ -299,7 +298,6 @@ enum func_keywords {
   kwISNUMBER,
   kwISSTRING,
   kwISMAP,
-  kwISREF,
   kwATAN2,
   kwPOW,
   kwROUND,
