@@ -337,77 +337,6 @@ var_t *eval_ref_var(var_t *var_p) {
   return result;
 }
 
-void v_eval_ref(var_t *v_left) {
-  var_t *v_right = NULL;
-  // can only reference regular non-dynamic variable
-  if (code_peek() == kwTYPE_VAR) {
-    code_skipnext();
-    v_right = tvar[code_getaddr()];
-    switch (v_right->type) {
-    case V_ARRAY:
-    case V_MAP:
-      switch (code_peek()) {
-      case kwTYPE_LEVEL_BEGIN:
-      case kwTYPE_UDS_EL:
-        // base variable or element reference only supported
-        v_right = resolve_var_ref(v_right);
-        if (v_right != NULL && v_right->type != V_REF) {
-          v_right = NULL;
-        }
-        break;
-      }
-      break;
-    default:
-      break;
-    }
-    if (v_right != NULL) {
-      int i;
-      int level = 0;
-      int left_level = -1;
-      int right_level = -1;
-      for (i = 0; i < prog_stack_count; i++) {
-        stknode_t *cur_node = &prog_stack[i];
-        var_t *v_stack = NULL;
-        switch (cur_node->type) {
-        case kwTYPE_CRVAR:
-        case kwBYREF:
-          v_stack = tvar[cur_node->x.vdvar.vid];
-          break;
-        case kwTYPE_VAR:
-          v_stack = cur_node->x.param.res;
-          break;
-        case kwPROC:
-        case kwFUNC:
-        case kwFOR:
-        case kwSELECT:
-          level++;
-          break;
-        }
-        if (v_stack != NULL) {
-          int next_level = (cur_node->type == kwBYREF) ? level -1 : level;
-          if (left_level == -1 && v_left == v_stack) {
-            left_level = next_level;
-          }
-          if (right_level == -1 && v_right == v_stack) {
-            right_level = next_level;
-          }
-        }
-      }
-      if (left_level < right_level && right_level > 0) {
-        // cannot assign left to higher scope right variable
-        v_right = NULL;
-      }
-    }
-  }
-  if (v_right == NULL) {
-    err_ref_var();
-  } else {
-    v_free(v_left);
-    v_left->type = V_REF;
-    v_left->v.ref = v_right;
-  }
-}
-
 /*
  * evaluate the pcode string
  */
