@@ -1,3 +1,6 @@
+2017-10-27 (0.12.10)
+	COMMON: removed experimental reference variable concept
+
 2017-10-25 (0.12.10)
 	COMMON: optimise byref let
 
